Initial support for product variants in Store
