# src/Store/Web/Client/OpenAPIs/swagger.yaml
@@ -50,14 +50,14 @@ paths:
                 $ref: "#/components/schemas/PagedResultOfProduct"
         404:
           description: ""
-  /api/v1/products/{id}:
+  /api/v1/products/{productIdOrHandle}:
     get:
       tags:
         - Products
         - Products
       operationId: Products_GetProductById
       parameters:
-        - name: id
+        - name: productIdOrHandle
           in: path
           required: true
           schema:
@@ -70,6 +70,116 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Product"
+        404:
+          description: ""
+  /api/v1/products/{productIdOrHandle}/findProductVariants:
+    post:
+      tags:
+        - Products
+        - Products
+      operationId: Products_FindProductVariantByAttributes
+      parameters:
+        - name: productIdOrHandle
+          in: path
+          required: true
+          schema:
+            type: string
+          x-position: 1
+      requestBody:
+        x-name: selectedAttributeValues
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties:
+                type: string
+        required: true
+        x-position: 2
+      responses:
+        200:
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Product"
+        404:
+          description: ""
+  /api/v1/products/{productIdOrHandle}/findProductVariants2:
+    post:
+      tags:
+        - Products
+        - Products
+      operationId: Products_FindProductVariantByAttributes2
+      parameters:
+        - name: productIdOrHandle
+          in: path
+          required: true
+          schema:
+            type: string
+          x-position: 1
+      requestBody:
+        x-name: selectedAttributeValues
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties:
+                type: string
+        required: true
+        x-position: 2
+      responses:
+        200:
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Product"
+        404:
+          description: ""
+  /api/v1/products/{productIdOrHandle}/variants:
+    get:
+      tags:
+        - Products
+        - Products
+      operationId: Products_GetProductVariants
+      parameters:
+        - name: productIdOrHandle
+          in: path
+          required: true
+          schema:
+            type: string
+          x-position: 1
+        - name: page
+          in: query
+          schema:
+            type: integer
+            format: int32
+            default: 1
+          x-position: 2
+        - name: pageSize
+          in: query
+          schema:
+            type: integer
+            format: int32
+            default: 10
+          x-position: 3
+        - name: searchTerm
+          in: query
+          schema:
+            type: string
+            nullable: true
+          x-position: 4
+      responses:
+        200:
+          description: ""
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/PagedResultOfProduct"
         404:
           description: ""
   /api/v1/productCategories:
@@ -235,6 +345,8 @@ components:
           nullable: true
         handle:
           type: string
+        hasVariants:
+          type: boolean
         attributes:
           type: array
           items:
@@ -300,6 +412,8 @@ components:
       type: object
       additionalProperties: false
       properties:
+        id:
+          type: string
         name:
           type: string
         description:
